Fix article spacings and font size

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -592,12 +592,18 @@ footer .small {
   opacity: 0.7;
 }
 
+.article-abstract {
+  font-size: 1.3rem;
+  font-weight: 300;
+}
+
 .tag {
   padding: 6px 12px;
   color: var(--contrast-color);
   background-color: var(--contrast-color-bright);
   font-size: 0.7rem;
   font-weight: 500;
+  margin: 6px;
 }
 
 .hero.row {
